resolved compilation problems